# zeek-duckdb

./: .gitignore  CMakeLists.txt  Makefile  PLAN.md  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: zeek_extension.cpp  zeek_reader.cpp  zeek_scanner.cpp
src/include/: zeek_extension.hpp  zeek_reader.hpp
test/sql/: zeek.test  zeek_ignore_file_errors.test  zeek_inet.test
